Finalizing the GameControllerTest test class. Adding script to delete test database.